@@ -1,3 +1,6 @@
+# custom
+start_server.sh
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
