@@ -8,15 +8,30 @@ from smolagents.agents import CodeAgent
 from smolagents import OpenAIServerModel, DuckDuckGoSearchTool
 from tools.aws_tools import get_aws_ec2_instances
 
+import os
+
+def load_config_file(config_path="config.txt"):
+    '''Load configuration from a simple key=value text file, if it exists'''
+    config = {}
+    try:
+        with open(config_path, "r") as f:
+            for line in f:
+                line = line.strip()
+                if line and "=" in line and not line.startswith("#"):
+                    key, value = line.split("=", 1)  # Split on first "=" only
+                    config[key.strip()] = value.strip()
+    except FileNotFoundError:
+        pass  # Ignore if file doesn't exist
+    return config
 
 def run_agent(query):
     '''run the code agent with the given query'''
-
-    # setup for a local llama.cpp server
+    print('SE_API_KEY',os.getenv("SE_API_KEY"))
+    #
     model = OpenAIServerModel(
-    model_id="none",
-    api_base="http://local-inference.openmarmot.com",
-    api_key="none"
+    model_id=os.getenv("SE_MODEL_ID"),
+    api_base=os.getenv("SE_API_BASE"),
+    api_key=os.getenv("SE_API_KEY")
     )
 
     # note - adding the duckduckgo search tool tends to cause it to search instead of write boto3 code
